# qubeml

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LESSONS.md  README.md  SSOT.md  pyproject.toml  requirements.txt  service-metadata.yaml
.claude/: AGENTS.md  CLAUDE.md  settings.json
.claude/commands/: bootstrap.md  handoff.md
.cursor/: rules.md
.github/workflows/: ci.yml
data/: README.md
docs/: INDEX.md  QUANTUMALGO_RESEARCH_PLAN.md  README.md  architecture.md  deployment.md  tool_progression_matrix.md  troubleshooting.md
docs/operations/: SYNC.md
materials_informatics/: README.md
quantum_computing/: README.md
quantum_computing/cirq/: NOTES.md
quantum_computing/qiskit/: qiskit_fundamentals.ipynb
scripts/: github-sync-report.mjs
tests/: conftest.py  test_materials_discovery.py  test_materials_edge_cases.py  test_package_init.py  test_plotting_utils.py  test_quantum_edge_cases.py
